--- a/taskkmanager/pubspec.yaml
+++ b/taskkmanager/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   uuid: ^4.0.0
   dartz: ^0.10.1
+  data_connection_checker_nulls: ^0.0.2
+
 
 dev_dependencies:
   flutter_test:
