add local storage

--- a/taskkmanager/pubspec.yaml
+++ b/taskkmanager/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   uuid: ^4.0.0
   dartz: ^0.10.1
   data_connection_checker_nulls: ^0.0.2
+  shared_preferences: ^2.2.3
 
 
 dev_dependencies:
